# paddle-server

./: app.py  main.py  pyproject.toml  test_health.py  test_process_pdf.py
config/: config.py
utils/: utils.py
