[project]
name = "paddle-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
    "python-multipart>=0.0.20",
]
